Black 3D / Corrupted viewport with Intel HD and Windows 8.1 / Windows 7 #59014

Closed
opened 2018-12-08 12:17:24 +01:00 by Bhanu · 53 comments

System Information
Operating system:Windows 8.1
Graphics card:Integrated Intel HD Graphics

Blender Version
Broken:
(example: 2.80, edbf15d3c0, blender2.8, 2018-11-28, as found on the splash screen)

Short description of error
The 3D Viewport looks complete black, meshes become visible after changing shading type, but grid floor is never visible
image.png
Exact steps for others to reproduce the error
Start the program and the error is right there.
Based on the default startup or an attached .blend file (as simple as possible).

**System Information** Operating system:Windows 8.1 Graphics card:Integrated Intel HD Graphics **Blender Version** Broken: (example: 2.80, edbf15d3c044, blender2.8, 2018-11-28, as found on the splash screen) **Short description of error** The 3D Viewport looks complete black, meshes become visible after changing shading type, but grid floor is never visible ![image.png](https://archive.blender.org/developer/F5884406/image.png) **Exact steps for others to reproduce the error** Start the program and the error is right there. Based on the default startup or an attached .blend file (as simple as possible).
Author

Added subscriber: @noob_user

Added subscriber: @noob_user

#63104 was marked as duplicate of this issue

#63104 was marked as duplicate of this issue

#58954 was marked as duplicate of this issue

#58954 was marked as duplicate of this issue

#62888 was marked as duplicate of this issue

#62888 was marked as duplicate of this issue

#62796 was marked as duplicate of this issue

#62796 was marked as duplicate of this issue

#60064 was marked as duplicate of this issue

#60064 was marked as duplicate of this issue

#62728 was marked as duplicate of this issue

#62728 was marked as duplicate of this issue

#61999 was marked as duplicate of this issue

#61999 was marked as duplicate of this issue

#62556 was marked as duplicate of this issue

#62556 was marked as duplicate of this issue

#58589 was marked as duplicate of this issue

#58589 was marked as duplicate of this issue

#62367 was marked as duplicate of this issue

#62367 was marked as duplicate of this issue

#60189 was marked as duplicate of this issue

#60189 was marked as duplicate of this issue

#60152 was marked as duplicate of this issue

#60152 was marked as duplicate of this issue

Added subscriber: @ZedDB

Added subscriber: @ZedDB

Try a newer blender beta https://builder.blender.org/download/
And also try to update your GPU drivers.

Report back your results.

Try a newer blender beta https://builder.blender.org/download/ And also try to update your GPU drivers. Report back your results.
Author

In #59014#578077, @ZedDB wrote:
Try a newer blender beta https://builder.blender.org/download/
And also try to update your GPU drivers.

Report back your results.

image.png

The issue is still as it is.
Used the latest build: Date:2018-12-16 23:25 Hash: 9149e89421 and GPU drivers are up-to-date

> In #59014#578077, @ZedDB wrote: > Try a newer blender beta https://builder.blender.org/download/ > And also try to update your GPU drivers. > > Report back your results. ![image.png](https://archive.blender.org/developer/F5978625/image.png) The issue is still as it is. Used the latest build: Date:2018-12-16 23:25 Hash: 9149e894210 and GPU drivers are up-to-date
Clément Foucault was assigned by Sebastian Parborg 2018-12-17 10:34:13 +01:00

Attach the output when you run blender with "--debug-gpu". You can also try and see if "--debug-gpu-force-workarounds" solves the issue.

Attach the output when you run blender with "--debug-gpu". You can also try and see if "--debug-gpu-force-workarounds" solves the issue.
Author

In #59014#581831, @ZedDB wrote:
Attach the output when you run blender with "--debug-gpu". You can also try and see if "--debug-gpu-force-workarounds" solves the issue.

with --debug-gpu output is:
image.png

tried "--debug-gpu-force-workarounds" , but the problem still persists

> In #59014#581831, @ZedDB wrote: > Attach the output when you run blender with "--debug-gpu". You can also try and see if "--debug-gpu-force-workarounds" solves the issue. with --debug-gpu output is: ![image.png](https://archive.blender.org/developer/F6017956/image.png) tried "--debug-gpu-force-workarounds" , but the problem still persists

Added subscribers: @Ron-P, @brecht

Added subscribers: @Ron-P, @brecht
Brecht Van Lommel changed title from 3D ViewPort complete black, nothing visible to Black 3D viewport with Intel HD graphics 2019-01-05 23:30:01 +01:00

Added subscriber: @RalphBiggins

Added subscriber: @RalphBiggins

Added subscriber: @mbutscher

Added subscriber: @mbutscher

Added subscriber: @MiG_1968

Added subscriber: @MiG_1968
Brecht Van Lommel changed title from Black 3D viewport with Intel HD graphics to Black 3D viewport with Intel HD and Windows 8.1 2019-03-11 18:29:36 +01:00

This seems specifically related to Windows version 8.1, or at least versions before 10.

This seems specifically related to Windows version 8.1, or at least versions before 10.
Added subscribers: @bzarnal, @fclem, @Sirithang, @mariohenriquelopes3, @tier777, @gazofnaz, @melisa, @JacquesLucke

Added subscriber: @niko_f5

Added subscriber: @niko_f5

I updated to Win10 and none of the problems are visible any more. No other changes were made to the computer.

I updated to Win10 and none of the problems are visible any more. No other changes were made to the computer.

This comment was removed by @niko_f5

*This comment was removed by @niko_f5*

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Niraj closed this issue 2019-03-16 14:37:11 +01:00

The problem got solved.
As suggested in one of the solutions, I changed my system default graphic driver to Nvidia from Intel.
Now it's working just fine.
Thanks a lot folks for your quick help.

The problem got solved. As suggested in one of the solutions, I changed my system default graphic driver to Nvidia from Intel. Now it's working just fine. Thanks a lot folks for your quick help.

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

Removed subscribers: @niko_f5, @RalphBiggins

Removed subscribers: @niko_f5, @RalphBiggins

Leaving open the report for others.

Leaving open the report for others.

Added subscribers: @XeroDarkhoter, @LazyDodo

Added subscribers: @XeroDarkhoter, @LazyDodo

Added subscriber: @callmecraig

Added subscriber: @callmecraig

Found this thread after having the same issue.
Intel 4th Gen i5
Integrated HD Graphics
Windows 8.1

I have done the following:
Installed the latest version of Blender 2.8 as of today.
Updated graphics driver to the latest version as of today.

Screenshot (41).png

and ran debug_gpu with the following results:

blender_debug_output.txt

Running in debug_gpu_glitchworkaround yielded no results.

Found this thread after having the same issue. Intel 4th Gen i5 Integrated HD Graphics Windows 8.1 I have done the following: Installed the latest version of Blender 2.8 as of today. Updated graphics driver to the latest version as of today. ![Screenshot (41).png](https://archive.blender.org/developer/F6835913/Screenshot__41_.png) and ran debug_gpu with the following results: [blender_debug_output.txt](https://archive.blender.org/developer/F6835926/blender_debug_output.txt) Running in debug_gpu_glitchworkaround yielded no results.

Added subscriber: @Arris

Added subscriber: @Arris

Added subscriber: @VijaySridhara

Added subscriber: @VijaySridhara

Windows 7, Release 2019-03-18, On Win 7, and Intel Graphics Card, issue still remains.
img_20190319171653.png

Windows 7, Release 2019-03-18, On Win 7, and Intel Graphics Card, issue still remains. ![img_20190319171653.png](https://archive.blender.org/developer/F6849312/img_20190319171653.png)

Changing default graphic card solved the problem in my case. Thank you for delivered solution.

Changing default graphic card solved the problem in my case. Thank you for delivered solution.

Added subscriber: @USER200

Added subscriber: @USER200

We haven't been able to reproduce this ourselves as developers, but marking as high priority due to the number of reports.

We've ordered a CPU with Intel HD graphics and will set up a system with Windows 7/8 to try to reproduce this.

Meanwhile the solution is to upgrade to Windows 10.

We haven't been able to reproduce this ourselves as developers, but marking as high priority due to the number of reports. We've ordered a CPU with Intel HD graphics and will set up a system with Windows 7/8 to try to reproduce this. Meanwhile the solution is to upgrade to Windows 10.

Added subscriber: @caleido

Added subscriber: @caleido

Added subscriber: @Stan_2016

Added subscriber: @Stan_2016

I have had the same problem for the last two days, and as many people have already said it works fine on 2.79

I have had the same problem for the last two days, and as many people have already said it works fine on 2.79

Added subscriber: @DoWagner

Added subscriber: @DoWagner
Clément Foucault changed title from Black 3D viewport with Intel HD and Windows 8.1 to Black 3D / Corrupted viewport with Intel HD and Windows 8.1 / Windows 7 2019-03-25 20:10:17 +01:00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Update OS to Windows 10.
Blender 2.8 works fine now.

Update OS to Windows 10. Blender 2.8 works fine now.

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

Removed subscriber: @MiG_1968

Removed subscriber: @MiG_1968

Added subscriber: @gt324

Added subscriber: @gt324

This issue was referenced by cc73d59ad5

This issue was referenced by cc73d59ad580f9f20286298b0d4547f0b1d87eda

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Just downloaded and tested blender-2.80-cc73d59ad580-win64 on the same machine used to report the bug in ticket #58589.

Everything works, looks great. Good job!

Thanks guys.

Just downloaded and tested blender-2.80-cc73d59ad580-win64 on the same machine used to report the bug in ticket #58589. Everything works, looks great. Good job! Thanks guys.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
14 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59014
No description provided.